Fix blurriness

--- a/src/style.css
+++ b/src/style.css
@@ -10,5 +10,6 @@ body {
 
 canvas {
   display: block;
+  image-rendering: pixelated;
+  image-rendering: crisp-edges;
 }
-
